# Chemformer

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  FIXME.md  README.md  env-dev.yml  inference_score_uspto_1.csv  inference_score_uspto_1_output_sampled_smiles.csv  inference_score_uspto_1_output_score_data.csv  pyproject.poetry.toml  pyproject.toml  requirements.txt
docs/: FIXED-python3_10-ipython-numpy-jupyter-dependencies.md  FIXME-pytests.md  orforglipron_retrosynthesis_with_chemformer_molbart_evaluation_report.md
outputs/: inference_score_uspto_260_output_sampled_smiles.json  inference_score_uspto_260_output_score_data.csv
outputs/2026-04-05/17-22-38/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-04-06/12-04-15/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-06/12-06-23/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-06/12-16-24/.hydra/: hydra.yaml
outputs/2026-04-06/12-17-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-06/12-17-40/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-04-21/09-15-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-22/12-43-19/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-22/12-58-51/.hydra/: hydra.yaml
outputs/2026-04-22/13-00-20/.hydra/: hydra.yaml
outputs/2026-04-22/13-07-08/.hydra/: hydra.yaml
outputs/2026-04-22/13-14-03/.hydra/: hydra.yaml
outputs/2026-04-22/13-19-06/.hydra/: hydra.yaml
outputs/2026-04-22/13-21-20/.hydra/: hydra.yaml
outputs/2026-04-22/13-24-41/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-22/13-45-39/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-22/13-48-51/.hydra/: hydra.yaml
outputs/2026-04-26/12-02-22/.hydra/: config.yaml  hydra.yaml
scripts/: get_explore_uspto680k.hist.ipy  get_uspto50k.hist.ipy  run_chemformer_service.sh
src/chemformer/data/uspto/: uspto50k_test.csv  uspto50k_val.csv  uspto680k_image_to_smiles_first10of680k.csv
src/chemformer/service/: chemformer_service.py  retrosynthesis_service.py
src/molbart/: build_tokenizer.py  constants.py  decoder.py  fine_tune.py  inference_score.py  predict.py  pretrain.py  tokeniser.py
src/molbart/bigdata/seq-to-seq_datasets/: README.md  uspto_1.tsv  uspto_2.tsv  uspto_260_test.tsv
src/molbart/bigmodels/: tokenizer.json
src/molbart/config/: build_tokenizer.yaml  inference_score.yaml  predict.yaml
src/molbart/config/trainer/: inference.yaml
src/molbart/models/: chemformer.py
src/molbart/utils/: trainer_utils.py
src/molbart/utils/samplers/: beam_search_samplers.py  beam_search_utils.py
src/molbart/utils/tokenizers.bak/: __init__.py
tests/: conftest.py  decoder_test.py  pre_train_model_test.py  test_atom_mapper.py  test_data.py  test_predict.py  test_scores.py
