[project]
name = "chemformer"
readme = "README.md"
requires-python = ">=3.8,<3.9"
version = "2.1.0"
description = "Smiles-based synthesis prediction."
authors = [
    {name = "Irwin, Ross", email = "ross.irwin1@astrazeneca.com"},
    {name = "Westerlund, Annie <annie.westerlund@astrazeneca.com>"},
    {name = "Saigiridharan, Lakshidaa", email="lakshidaa.saigiridharan@astrazeneca.com"},
    {name = "Peter Hartog", email="peter.hartog@astrazeneca.com"},
    {name = "Genheden, Samuel", email="samuel.genheden@astrazeneca.com"},
    ]
license = "Apache-2.0"
packages = [{ include = "molbart" }]

dependencies = [
    "rdkit>=2022.9.3,<2022.10.0",
    "torch==1.8.1",
    "pytorch-lightning==1.2.3",
#    "pysmilesutils",  #  = { git==https://github.com/MolecularAI/pysmilesutils.git" }
    "hydra-core>=1.3.2,<1.4",
    "hydra-colorlog>=1.2.0,<1.3",
    "hydra-optuna-sweeper>=1.2.0,<1.3",
    "fastapi<=0.98.0,<0.99.0",
    "pandas>=1.3.5,<1.4",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest-mock>=3.10.0",
    "pytest-datadir>=1.4.1",
]

train = [
    "wandb>=0.16.5,<0.17.0",
    "textbrewer>=0.2.1.post1,<0.3.0",
    "eco2ai>=0.3.9,<0.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
